--- a/vueeful/package.json
+++ b/vueeful/package.json
@@ -18,8 +18,12 @@
     "apollo-client": "^2.2.3",
     "apollo-link": "^1.1.0",
     "apollo-link-http": "^1.3.3",
+    "bootstrap": "^4.0.0",
+    "bootstrap-vue": "^2.0.0-rc.1",
     "graphql": "^0.11.7",
     "graphql-tag": "^2.7.3",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
     "vue": "^2.5.2",
     "vue-apollo": "^3.0.0-beta.2",
     "vue-router": "^3.0.1"
